@startuml
abstract class com.example.lb2_javafx.Shape {
+ Color color
~ {abstract}void draw(GraphicsContext)
}


class com.example.lb2_javafx.Line {
+ double x
+ double y
+ void draw(GraphicsContext)
}


class com.example.lb2_javafx.Rectangle {
+ double length
+ double width
+ double area()
+ void draw(GraphicsContext)
}


class com.example.lb2_javafx.Triangle {
+ void draw(GraphicsContext)
}



com.example.lb2_javafx.Shape <|-- com.example.lb2_javafx.Line
com.example.lb2_javafx.Shape <|-- com.example.lb2_javafx.Rectangle
com.example.lb2_javafx.Shape <|-- com.example.lb2_javafx.Triangle
@enduml